--- a/AuthProject/Pages/Consent.cshtml
+++ b/AuthProject/Pages/Consent.cshtml
@@ -1,10 +1,9 @@
 ﻿@page
 @using AuthProject;
-@model AuthProject.Pages.ConfirmModel
+@model AuthProject.Pages.ConsentModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
-    Layout = null;
 }
 
 Consent
