rabbitMQ initial commit some renames (still mactching credentials to Consts.cs's fields)

--- a/AuthProject/Pages/Consent.cshtml
+++ b/AuthProject/Pages/Consent.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
-@using AuthProject;
-@model AuthProject.Pages.ConsentModel
+@using AuthorizationServer;
+@model AuthorizationServer.Pages.ConsentModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
