--- a/AuthProject/Pages/_ViewImports.cshtml
+++ b/AuthProject/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using AuthProject
-@namespace AuthProject.Pages
+﻿@using AuthorizationServer
+@namespace AuthorizationServer.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
